# dssp-jax

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: run_example.py
src/dsspjax/: __init__.py  accesibility_old.py  accessibility.py  beta.py  constants.py  geometry.py  hbonds.py  io.py  main.py  math_utils.py  secondary_structure.py  types.py
tests/: __init__.py
